2004-11-03	Matthias Trute	<mtrute@users.sourceforge.net>
	* varios files : made some regression tests. Improved error handling.

2004-07-20  Frank Schmischke  <frank.schmischke@t-online.de>

	* ib.c : correct logic for emergency-stop and pressing "POWER ON"-Button at IB

2004-06-13  Frank Schmischke  <frank.schmischke@t-online.de>

	* hsi-88.c: change position for calling check_reset_fb() to solve some problems

2004-05-28  Frank Schmischke  <frank.schmischke@t-online.de>

	* ib.c: process return of power on IB
	* ib.*, hsi-88.*, li100.*: make some function-names more standards-like
	* li100.*, config-srcpd.*: initialisation of LI100

2004-05-23 18:54  mborchers

	* ib.c: function changes sent by the iB are now correctly set in
	the GLSTATE struct (and correctly displayed by clients of course)

2004-05-15 22:06  mtrute

	* ddl.c, ddl_maerklin.c, srcp-gl.c: do not mix marklin and dcc
	signals, minor typos

2004-04-09 16:36  mtrute

	* config-srcpd.h, netserver.c: Minor cleanup, Busses may use there
	busnumber as a SRCP sessionid, e.g. for locking

2004-03-12 15:04  schmischi

	* ChangeLog, acinclude.m4, config-srcpd.h, config.h.in,
	configure.in, ib.h, io.c, netserver.c: some cleanup's

2004-03-12 15:01  schmischi

	* ddl-s88.c, hsi-88.c, ib.c, m605x.c, srcp-fb.c, zimo.c: correct
	logic for reset feedbacks when delay is set

2004-02-03 01:35  schmischi

	* netserver.c: [no log message]

2004-02-03 01:34  schmischi

	* ib.c: improve SM-mode

2004-02-03 01:20  schmischi

	* ib.h: some definitions

2004-02-03 01:18  schmischi

	* srcp-fb.c: update reset of GA

2004-02-03 01:08  schmischi

	* srcp-sm.c, srcp-sm.h: add TERM for SM

2004-02-03 01:06  schmischi

	* srcp-power.c: in setPower remove state -1

2004-02-03 01:04  schmischi

	* srcp-gl.c: more logic for calculate speed

2004-02-03 00:55  schmischi

	* Makefile.am: [no log message]

2004-02-03 00:47  schmischi

	* io.c: [no log message]

2004-02-03 00:40  schmischi

	* config-srcpd.h: change comment
