@@ -15,5 +15,6 @@
     </loopback>
     <use_watchdog>no</use_watchdog>
     <verbosity>5</verbosity>
+    <auto_power_on>yes</auto_power_on>
    </bus>
 </srcpd>
